# StarGame

./: .gitignore  CMakeLists.txt  FindSOIL.cmake  README.md  build.sh  main.cpp
assets/shaders/: tex.f  tex.v
core/: Object.h  Saver.h  shortCalls.h
glUtils/: GLD.h  Shader.h  TextRenderer.h  character.h
